--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: any
+  firebase_auth: any
   cloud_firestore: any
   google_maps_flutter: any
-  shared_preferences: ^2.0.8
+  shared_preferences: any
 
 dev_dependencies:
   flutter_test:
